force-app/main/default/objects/CampaignMember/CampaignMember.object-meta.xml
<CustomObject>
</CustomObject>