force-app/main/default/objects/CampaignMember/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Returns City from connected Campaign record</description>
    <formula>TEXT(Campaign.MeetingCity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>