force-app/main/default/objects/CampaignMember/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <description>Returns Meeting Start date from connected Campaign record</description>
    <formula>Campaign.DateFrom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date From</label>
    <type>DateTime</type>
</CustomField>