force-app/main/default/objects/CampaignMember/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <description>Returns Meeting End date from connected Campaign record</description>
    <formula>Campaign.DateTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date To</label>
    <type>DateTime</type>
</CustomField>