force-app/main/default/objects/CampaignMember/fields/MeetingType__c.field-meta.xml
<CustomField>
    <fullName>MeetingType__c</fullName>
    <description>Returns the Meeting type of the related Campaign</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeetingType</valueSetName>
    </valueSet>
</CustomField>