force-app/main/default/objects/CampaignMember/fields/PosExternalId__c.field-meta.xml
<CustomField>
    <fullName>PosExternalId__c</fullName>
    <description>This field is to hold CampaignMemberId migrated from Poseidon</description>
    <externalId>true</externalId>
    <label>PosExternalId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>