force-app/main/default/objects/CampaignMember/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field is used to display the Campaign Program on Opportunity level.</description>
    <formula>Text(Campaign.Program__c )</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>