force-app/main/default/objects/CampaignMember/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>This field is used to display the meeting size on Opportunity level.</description>
    <formula>Campaign.MeetingSize__c</formula>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>