force-app/main/default/objects/CampaignMember/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Returns Meeting Type from connected Campaign record</description>
    <formula>TEXT(Campaign.MeetingType__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>